--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -13,14 +13,6 @@
     transform: translateY(-6px);
 }
 
-.projects-dash {
-    justify-self: center;
-    background-color: orangered;
-    height: 2px;
-    margin-top: 24px;
-    width: 75px;
-}
-
 .project-desc {
     color: #ccc;
     font-family: var(--main-font);
@@ -71,6 +63,14 @@
     min-height: 100vh;
 }
 
+.projects-dash {
+    justify-self: center;
+    background-color: orangered;
+    height: 2px;
+    margin-top: 24px;
+    width: 75px;
+}
+
 .projects-grid {
     display: grid;
     gap: 24px;
@@ -96,12 +96,6 @@
 
 /* mobile */
 @media (max-width: 734px) {
-    .projects-dash {
-        height: 1.5px;
-        justify-self: center;
-        width: 50px;
-    }
-
     .project-card {
         background: linear-gradient(black, rgba(255, 255, 255, 0.2));
         border: none;
@@ -130,6 +124,12 @@
         align-items: stretch;
     }
 
+    .projects-dash {
+        height: 1.5px;
+        justify-self: center;
+        width: 50px;
+    }
+
     .projects-subtext {
         font-size: 16px;
         line-height: 1.25;
@@ -137,7 +137,11 @@
     }
 
     .projects-text {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
         font-size: 36px;
+        justify-content: center;
         line-height: 0.2;
         margin-bottom: 4vh;
     }
